@@ -1,0 +1,1 @@
+.so man3/debuginfod_find_debuginfo.3
