@@ -1,3 +1,9 @@
+2020-03-24  Frank Ch. Eigler  <fche@redhat.com>
+
+	* debuginfod_add_http_header.3: New function, documented ...
+	* debuginfod_find_debuginfo.3: ... here.
+	* Makefile.am (notrans_dist_*_man3): Add it.
+
 2020-03-26  Frank Ch. Eigler  <fche@redhat.com>
 
 	* debuginfod.8 (-R): Note zstd compression complications
