@@ -1,3 +1,8 @@
+2020-03-24  Frank Ch. Eigler  <fche@redhat.com>
+
+	* run-debuginfod-find.sh: Test relay of UA and XFF headers across
+	federating debuginfods.
+
 2020-03-26  Frank Ch. Eigler <fche@redhat.com>
 
 	* run-debuginfod-find.sh: Look for debuginfod's new
